ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--  Mobile First <link rel="stylesheet" href="style.css" /> -->
 
     <!--Style Responsive-->
-    <link rel="stylesheet" href="style-responsive.css" />
+    <link rel="stylesheet" href="./style-responsive.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -731,6 +731,6 @@
     </a>
     <!-- ScrollReaveal Lib-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
